# lit-components

./: .gitignore  .lighthouse-cache.json  DOCS_VERIFICATION_EXECUTIVE_SUMMARY.md  DOCS_VERIFICATION_SUMMARY.md  LICENSE  README.md  actionlint.yaml  apt-viewer.html  coverage.json  custom-elements-manifest.config.mjs  index.html  lighthouserc.json  package-lock.json  package.json  prd.md  test-runner-jest.config.js  tsconfig-module.json  tsconfig.json  verify-docs.js  vg-package-lock.json  vg-package.json  vite-module.config.ts  vite.config.ts
.github/: copilot-instructions.md
.storybook/: LIGHTHOUSE_TEST_RUNNER.md  ThemedDocsContainer.tsx  all.scss  controls.ts  decorators.ts  framework-transformer.ts  lighthouse-config.cjs  lighthouse-config.mjs  lighthouse-config.ts  lighthouse-runner.mjs  main.ts  manager.ts  preview.ts  preview.tsx  test-runner-utils.ts  test-runner.ts
demo/: package.json
docs/: DOCS_VERIFICATION_DETAILED_REPORT.md  DOCS_VERIFICATION_EXECUTIVE_SUMMARY.md  DOCUMENTATION_EXTRACTION.md  DOCUMENTATION_EXTRACTION_FIX.md  DOCUMENTATION_EXTRACTION_QUICKSTART.md  LIGHTHOUSE.md  (+33 more)
mcp/: .gitignore  FRAMEWORK_SETUP_IMPLEMENTATION.md  FRAMEWORK_SETUP_UPDATE_SUMMARY.md  MANIFEST.in  QUICK_REFERENCE.md  README.md  demo_framework_instructions.py  fastmcp.json  pyproject.toml  setup.py  test_comprehensive.py  test_framework_instructions.py  test_framework_simple.py  test_refactored_module.py
mcp/src/lit_components_mcp/: main.py
mcp/src/vg_ui_lib_mcp/: __init__.py  framework_instructions.py  main.py
mcp/src/vg_ui_lib_mcp/data/: component-registry.json
(+130 files in other folders)
